# mff

./: .gitignore  README.md  index.html  transform.html
ZS4/Cecko/: .gitignore  CMakeConf.cmake  CMakeLists.txt
ZS4/Cecko/doc/: selected-grammar.md
ZS4/Cecko/fmwk/: CMakeLists.txt  ckbisonflex.hpp  ckcontext.cpp  ckcontext.hpp  ckdumper.y  ckgrptokens.hpp  ckir.cpp  ckir.hpp  ckmain.cpp  ckmain.hpp  cktables.cpp  cktables.hpp  faq.md
ZS4/Cecko/main/: CMakeLists.txt  cecko1.cpp  cecko2.cpp  cecko3.cpp  cecko4.cpp  cecko5.cpp
ZS4/Cecko/skeleton-master/: README.md
ZS4/Cecko/solution/: CMakeLists.txt  calexer.lex  caparser.y  casem.cpp  casem.hpp  runTests.sh
ZS4/Cecko/test/: CMakeLists.txt  custom.c  test1.c  test1.cecko1.gold  test1.cecko3.gold  test1.cecko5.gold  test2typedef.c  test2typedef.cecko3.gold  test2typedef.cecko4.gold  test2typedef.cecko5.gold  testcontrol-shortcut.cecko5.gold  testdecl-arr.c  testdecl-arr.cecko3.gold  testdecl-constptr.c  testdecl-elementary.c  testdecl-enum.c  testdecl-enum.cecko3.gold  testdecl-function.c  testdecl-function.cecko3.gold  testdecl-funptr.c  testdecl-funptr.cecko3.gold  testdecl-local.c  testdecl-pointer.c  testdecl-pointer.cecko3.gold  testdecl-struct.c  testdecl-struct.cecko3.gold  testdecl-typedef.c  testdecl-typedef.cecko3.gold  testexpr-compop.c  testexpr-compop.cecko4.gold  testexpr-conv.c  testexpr-conv.cecko4.gold  testexpr-intop.cecko4.gold  testexpr-pointer.c  testexpr-pointer.cecko4.gold  testexpr-ptrop.c  testexpr-ptrop.cecko4.gold  testexpr-sizeof.cecko4.gold  testexpr-struct.c  testexpr-struct.cecko4.gold  (+17 more)
(+2323 files in other folders)
